Improved tutorial UI

--- a/css/main.css
+++ b/css/main.css
@@ -9,3 +9,4 @@
 @import url("./components/codemirror.css");
 @import url("./components/chat.css");
 @import url("./components/panels.css");
+@import url("./components/tutorial.css");
